Change image name

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="row row-cols-1 row-cols-md-2 row-cols-lg-6 g-4 my-sm-5 mx-sm-2 m-lg-5">	
 			<div class="col">
 				<div class="card h-100">
-					<img src="./images/card1.png" class="card-img-top img-fluid" alt="...">
+					<img src="./images/Card1.png" class="card-img-top img-fluid" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">E-Commerce API Documentation</h5>
 						<p class="card-text">Dynamic E-Commerce Workflow Management. The system features dynamic routes for order processing, real-time inventory updates, and secure user authentication. It also supports seamless automated order reporting and comprehensive product management. Documented Backend API published publicly using Postman.</p>
